# ppkMHD

./: .gitignore  CMakeLists.txt
scripts/: configure.sh  loadModules.sh
src/: CMakeLists.txt  main.cpp
src/mood/: CMakeLists.txt
src/muscl/: CMakeLists.txt
src/sdm/: CMakeLists.txt  SDMBaseFunctor.h  SDM_Boundaries_Functors.h  SDM_Boundaries_Functors_Jet.h  SDM_Boundaries_Functors_Wedge.h  SDM_Compute_error.h  SDM_Dt_Functor.h  SDM_Flux_Functors.h  SDM_Flux_with_Limiter_Functors.h  SDM_Geometry.h  SDM_Interpolate_Functors.h  SDM_Interpolate_Functors2.h  SDM_Interpolate_viscous_Functors.h  SDM_Limiter_Functors.h  SDM_Positivity_preserving.h  SDM_Run_Functors.h  SDM_Viscous_Flux_Functors.h  SolverHydroSDM.h
src/shared/: BoundariesFunctors.h  BoundariesFunctorsWedge.h  CMakeLists.txt  EulerEquations.h  HydroParams.cpp  HydroParams.h  HydroParamsMpi.h  RiemannSolvers.h  RiemannSolvers_MHD.h  SolverBase.cpp  SolverBase.h  SolverFactory.h  enums.h  mhd_utils.h  mpiBorderUtils.h  solver_utils.h  utils.cpp
src/utils/config/: CMakeLists.txt
src/utils/io/: CMakeLists.txt
src/utils/monitoring/: CMakeLists.txt
src/utils/mpiUtils/: CMakeLists.txt
src/utils/mpi_env/: CMakeLists.txt
test/backward-cpp/: CMakeLists.txt
test/configMap/: CMakeLists.txt
test/io/: CMakeLists.txt
test/kokkos/: CMakeLists.txt
test/mood/: CMakeLists.txt
test/sdm/: CMakeLists.txt
test/shared/: CMakeLists.txt
